Sistema de Conceitos

--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -46,4 +46,9 @@
         <a href="{% url 'lista_feedback' %}"><li>Organizações Parceiras</li></a>
     </ul>
 
+    <h5>Avaliações</h5>
+    <ul>
+        <a href="{% url 'resultado_avaliacoes' %}"><li>Resultados</li></a>
+    </ul>
+
 {% endblock %}
