para manter consistência do banco de dados

--- a/projetos/templates/projetos/cadastra_usuario.html
+++ b/projetos/templates/projetos/cadastra_usuario.html
@@ -38,18 +38,18 @@
     <br><br>
 
     <label for="nome">Nome do Usuário<br></label><br>
-    <input type="text" size="80" id="nome" name="nome" value="{{nome}}" required><br>
+    <input type="text" size="80" maxlength="80" id="nome" name="nome" value="{{nome}}" required><br>
     <br><br>
 
-    <label for="email">e-mail:</label> <input type="email" size="73" id="email" name="email" value="{{email}}" required><br><br>
+    <label for="email">e-mail:</label> <input type="email" size="73" maxlength="73" id="email" name="email" value="{{email}}" required><br><br>
 
     <input type="radio" name="genero" id="masculino" value="masculino"> <label for="masculino"> Masculino</label>&nbsp;&nbsp;&nbsp;
     <input type="radio" name="genero" id="feminino" value="feminino"> <label for="feminino"> Feminino</label>
 
     <br><br>
 
-    <label for="cpf">CPF:</label> <input type="text" size="14" id="cpf" name="cpf" value="{{cpf}}"><br>
-    <label for="linkedin">LinkedIn:</label><input type="text" size="73" id="linkedin" name="linkedin" value="{{linkedin}}" placeholder="https://www.linkedin.com/"><br>
+    <label for="cpf">CPF:</label> <input type="text" size="14" maxlength="14" id="cpf" name="cpf" value="{{cpf}}"><br>
+    <label for="linkedin">LinkedIn:</label><input type="text" size="73" maxlength="73" id="linkedin" name="linkedin" value="{{linkedin}}" placeholder="https://www.linkedin.com/"><br>
 
     {% comment %}
     <input type="checkbox" id="membro_comite" name="membro_comite" value="True">
@@ -60,7 +60,7 @@
 
     <div style="display: block; padding-left: 32px" class="row" data-type="estudante">
 
-      <label for="matricula">Matrícula: </label> <input type="text" size="8" id="matricula" name="matricula" value="{{matricula}}"><br>
+      <label for="matricula">Matrícula: </label> <input type="text" size="8" maxlength="8" id="matricula" name="matricula" value="{{matricula}}"><br>
  
       Curso: 
       <input type="radio" name="curso" id="computacao" value="computacao" required> <label for="computacao"> Computação</label>&nbsp;&nbsp;&nbsp;
@@ -80,10 +80,10 @@
       <input type="radio" name="dedicacao" id="tp" value="tp" required> <label for="tp"> TP</label>
       <br>
 
-      <label for="areas">Áreas de interesse: </label> <input type="text" size="80" id="areas" name="areas" value="{{areas}}"><br>
+      <label for="areas">Áreas de interesse: </label> <input type="text" size="80" maxlength="80" id="areas" name="areas" value="{{areas}}"><br>
  
-      <label for="website">website:</label><input type="text" size="73" id="website" name="website" value="{{website}}" placeholder="https://www.insper.edu.br/"><br>
-      <label for="lattes">lattes:</label><input type="text" size="73" id="lattes" name="lattes" value="{{lattes}}" placeholder="https://lattes.cnpq.br/"><br>
+      <label for="website">website:</label><input type="text" size="73" maxlength="73" id="website" name="website" value="{{website}}" placeholder="https://www.insper.edu.br/"><br>
+      <label for="lattes">lattes:</label><input type="text" size="73" maxlength="73" id="lattes" name="lattes" value="{{lattes}}" placeholder="https://lattes.cnpq.br/"><br>
 
     </div>
     <div style="display: block; padding-left: 32px" class="row" data-type="parceiro">
@@ -98,11 +98,11 @@
           {% endfor %}
       </select><br>
 
-      <label for="cargo">cargo:</label><input type="text" size="50" id="cargo" name="cargo" value="{{cargo}}"><br>
+      <label for="cargo">cargo:</label><input type="text" size="50" maxlength="90" id="cargo" name="cargo" value="{{cargo}}"><br>
       
-      <label for="telefone">telefone:</label><input type="text" size="20" id="telefone" name="telefone" value="{{telefone}}"><br>
-      <label for="celular">celular:</label><input type="text" size="20" id="celular" name="celular" value="{{celular}}"><br>
-      <label for="skype">skype:</label><input type="text" size="32" id="skype" name="skype" value="{{skype}}"><br>
+      <label for="telefone">telefone:</label><input type="text" size="20" maxlength="20" id="telefone" name="telefone" value="{{telefone}}"><br>
+      <label for="celular">celular:</label><input type="text" size="20" maxlength="20" id="celular" name="celular" value="{{celular}}"><br>
+      <label for="skype">skype:</label><input type="text" size="32" maxlength="32" id="skype" name="skype" value="{{skype}}"><br>
 
       <label for="observacao">Observações:</label><br>
       <textarea id="observacao" name="observacao" rows="4" cols="80" maxlength="500">{{observacao}}</textarea><br>
