somente admin pode gravar pre alocacoes

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -24,6 +24,6 @@
     <a href="{% url 'relatorios' %}"><h5>Relatórios</h5></a>
     <a href="{% url 'montar_grupos' %}"><h5>Montar Grupos para Projetos</h5></a>
     <a href="{% url 'propor' %}"><h5>Propor Grupos para Projetos</h5></a>
-    <a href="{% url 'carregar' %}"><h5>Carregar dados (CUIDADO PODE COMPROMETER BASE DE DADOS)</h5></a>
+    <a href="{% url 'carregar' %}"><h5>Carregar dados</h5></a>
 
 {% endblock %}
